# no-more-procrastination

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yml
bot/: Dockerfile
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: run_telegram_bot.py
habits/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_is_active.py  0003_alter_user_managers.py
