[project]
name = "cw7-habit-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduard Slobodyanik",email = "slobodyanik.ed@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "django (==4.2.2)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "flake8 (>=7.1.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
