[tool.poetry]
name = "CW7-habit-tracker"
version = "0.1.0"
description = ""
authors = ["Eduard Slobodyanik <slobodyanik.ed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
isort = "^6.0.0"
django = "4.2.2"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.4.0"
ipython = "^8.32.0"
coverage = "^7.6.12"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.7.0"
requests = "^2.32.3"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
python-slugify = "^8.0.4"
flake8 = "^7.1.2"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.55"
pillow = "^11.1.0"
djangorestframework-camel-case = "^1.4.2"
drf-spectacular = "^0.28.0"
crispy-bootstrap4 = "^2024.10"
django-extensions = "^3.2.3"
telebot = "^0.0.5"
gunicorn = "^23.0.0"
django-redis = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"